--- a/src/app/modules/admin/components/add-staff/add-staff.component.scss
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.scss
@@ -2,6 +2,10 @@
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
+ #erromsgformbl{
+    font-size: 12px;
+    color: red;
+ }
 .catalogName {
     font-size: large;
     margin-left: 5%;
