--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -83,7 +83,7 @@
 
           </mat-form-field>
           <div *ngIf="submitted && productForm.get('catalog').invalid">
-            <div *ngIf="productForm.get('catalog').errors.required" style="color: red;"> select catalog is required.
+            <div *ngIf="productForm.get('catalog').errors.required" style="color: red;" id="selectcatalogerrormsg"> select catalog is required.
             </div>
           </div>
         </div>
@@ -105,7 +105,8 @@
 
             </mat-select>
             <div *ngIf="submitted && productForm.get('productOption').invalid">
-              <div *ngIf="productForm.get('productOption').errors.required" style="color: red;">select option is required.</div>
+              <div *ngIf="productForm.get('productOption').errors.required" style="color: red;">select option is
+                required.</div>
             </div>
           </mat-form-field>
 
