--- a/src/app/modules/admin/components/update-staff/update-staff.component.scss
+++ b/src/app/modules/admin/components/update-staff/update-staff.component.scss
@@ -61,6 +61,10 @@ body{
   background-color: var(--toast-background); // Use your custom color here
   color: var(--toast-text); // Use your custom text color here
 }
+#erromsgformbl{
+  font-size: 12px;
+  color: red;
+}
 @media screen and (min-width:360px) and (max-width:1400px) {
 
   [class*="col-2"] {
